<!-- activity_add_pet.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_app"
    android:padding="16dp">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/vacina"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/vaccine_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/nome_da_vacina" />

    <EditText
        android:id="@+id/vaccine_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/_12_12_2012"
        android:inputType="date" />


    <Button
        android:id="@+id/add_vaccine_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/background_vaccine"
        android:text="@string/adicionar" />
</LinearLayout>
